Se añade opción para filtrar por nombre

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <input id="init-button" type="button" value="Iniciar programa">
         <div id="input-bar">
             <div id="filters">
-                <input type="text" name="" id="" class="filter" placeholder="Buscar por tipo...">
-                <input type="text" name="" id="" class="filter" placeholder="Buscar por nombre...">
-                <input type="text" name="" id="" class="filter" placeholder="Buscar por poder...">
+                <!-- <input type="text" name="" id="type-filter" class="filter" placeholder="Buscar por tipo..."> -->
+                <input type="text" name="" id="name-filter" class="filter" placeholder="Buscar por nombre...">
+                <!-- <input type="text" name="" id="power-filter" class="filter" placeholder="Buscar por poder..."> -->
             </div>
             <div id="buttons">
                 <input type="button" value="Añadir a lista de deseos">
