--- a/index.html
+++ b/index.html
@@ -1,39 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Pokedex</title>
-        <link rel="icon" href="assets/images/pokeball.png" type="image/png">
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <div class="header">
-            <img src="assets/images/logo.png" class="logo">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokemon Shop</title>
+    <link rel="shortcut icon" href="./assets/images/pokeball.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <img src="./assets/images/logo.png" alt="logo" width="25%">
+        <div id="input-bar">
+            <div id="filters-container">
+                <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
+                <input type="text" name="filterByType" id="filter-by-type" placeholder="Filter by type...">
+                <input type="text" name="filterByWeight" id="filter-by-weight" placeholder="Filter by weight...">
+            </div>
+            <div id="actions-container">
+                <input type="button" value="Add to wishlist">
+                <input type="button" value="Wishlist">
+                <input type="button" value="Buy">
+                <input type="button" value="Shopping cart">
+            </div>
         </div>
-        <div class="body">
-            <button id="button" class="letsgo">Let's go!</button>
-        </div>
-        <div class="filterButtons">
-            <input type="text" id="filtroTipo" class="input"
-                placeholder="Buscar por tipo...">
-            <input type="text" id="filtroPeso" class="input"
-                placeholder="Buscar por peso..">
-            <input type="text" id="filtroPoderTotal" class="input"
-                placeholder="Buscar por Poder Total...">
-        </div>
-        <div class="menuButtons">
-            <input type="button" id="btnAgnadeListaDeseo" class="btnMenu"
-                value="Añadir a lista de deseos" />
-            <input type="button" id="btnVerLista" class="btnMenu"
-                value="Ver lista de deseos" />
-            <input type="button" id="btnComprar" class="btnMenu"
-                value="Comprar" />
-            <input type="button" id="btnVerCompra" class="btnMenu"
-                value="Ver compra" />
-        </div>
-        <div id="pokedex">
-            <p class="cargandoDatos">Cargando datos...</p>
-        </div>
-        <script type="module" src="./src/script.js"></script>
-    </body>
+    </header>
+    <main>
+        <h2 id="loadingDataText" style="text-align: center;">Loading data...</h2>
+        <div id="pokedex"></div>
+    </main>
+    <script type="module" src="./js/script.js"></script>
+</body>
 </html>
