Se adelanta proyecto

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <input type="text" name="filterByType" id="filter-by-type" placeholder="Filter by type...">
             </div>
             <div id="actions-container">
-                <input type="button" value="Add to wishlist">
-                <input type="button" value="Wishlist">
-                <input type="button" value="Buy">
-                <input type="button" value="Shopping cart">
+                <input type="button" value="Add to wishlist" id="add-to-wishlist">
+                <input type="button" value="Wishlist" id="wishlist">
+                <input type="button" value="Add to shopping cart" id="add-to-shopping-cart">
+                <input type="button" value="Shopping cart" id="shopping-cart">
             </div>
         </div>
     </header>
