Se arreglan los botones y se posiciona el header como fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header>
-        <img src="./assets/images/logo.png" alt="logo" width="25%">
         <div id="input-bar">
             <div id="filters-container">
                 <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
@@ -22,9 +21,10 @@
                 <input type="button" value="Shopping cart" id="shopping-cart">
             </div>
         </div>
+        <img src="./assets/images/logo.png" alt="logo" width="25%">
     </header>
     <main>
-        <h2 id="loadingDataText" style="text-align: center;">Loading data...</h2>
+        <h2 id="loadingDataText">Loading data...</h2>
         <div id="pokedex"></div>
     </main>
     <script type="module" src="./js/script.js"></script>
