Se terminan los filtros por nombre y tipo; se añade precio a los items

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Pokemon Shop</title>
     <link rel="shortcut icon" href="./assets/images/pokeball.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,6 +16,7 @@
             <div id="filters-container">
                 <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
                 <input type="text" name="filterByType" id="filter-by-type" placeholder="Filter by type...">
+                <!-- TODO: Make price filter with 2 ranges (min and max) -->
             </div>
             <div id="actions-container">
                 <input type="button" value="Add to wishlist" id="add-to-wishlist">
