--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon Shop</title>
+    <meta name="author" content="Jesus Lugo">
+    <title>Pokemon Shop | Home</title>
     <link rel="shortcut icon" href="./assets/images/pokeball.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +17,6 @@
             <div id="filters-container">
                 <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
                 <input type="text" name="filterByType" id="filter-by-type" placeholder="Filter by type...">
-                <!-- TODO: Make price filter with 2 ranges (min and max) -->
             </div>
             <div id="actions-container">
                 <input type="button" value="Add to wishlist" id="add-to-wishlist">
