Se adelanta sistema de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div id="login-container"></div>
+        <div id="profile-container"></div>
         <div id="input-bar">
             <div id="filters-container">
                 <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
