Se termina extracción y transferencia entre scripts de los datos del usuario

--- a/src/shop.html
+++ b/src/shop.html
@@ -13,6 +13,10 @@
 </head>
 <body>
     <header>
+        <div id="user-container">
+            <p id="username"></p>
+            <p id="balance" style="color: green;"></p>
+        </div>
         <div id="input-bar">
             <div id="filters-container">
                 <input type="text" name="filterByName" id="filter-by-name" placeholder="Filter by name...">
