Se añaden wishlist.html y shopping-cart.html; se abre acceso a los datos correspondientes en Firestore para añadir, remover y modificar.

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Jesus Lugo">
     <title>PokemonShop | Login</title>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="./assets/images/pokeball.png" type="image/x-icon">
 </head>
 <body>
     <header style="text-align: center;">
