Se añade funcionalidad de registrar nuevos usuarios

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             <label for="password">Password: </label>
             <input type="password" name="password" id="signup-password" required><br>
             <label for="r-password">Repeat password: </label>
-            <input type="password" name="r-password" id="input-r-password" required><br>
+            <input type="password" name="r-password" id="signup-r-password" required><br>
             <input type="button" value="Sign Up" id="signup-button">
         </form>
     </main>
