--- a/src/shopping-cart.html
+++ b/src/shopping-cart.html
@@ -12,11 +12,12 @@
         <p class="navbar-brand">PokemonShop | My shopping cart</p>
     </header>
     <main>
-
+        <ul id="items-list" class="list-group"></ul>
     </main>
     <footer>
         Jesús Lugo @ 2024
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="module" src="./js/views/shopping-cart.js"></script>
 </body>
 </html>
