Se termina esta mondaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

--- a/src/shop.html
+++ b/src/shop.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div id="user-container">
-            <p id="username"></p>
+            <h3 id="username"></h3>
             <p id="balance" style="color: green;"></p>
         </div>
         <div id="input-bar">
