--- a/src/user-profile.html
+++ b/src/user-profile.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>PokemonShop | My cart</title>
+    <title>PokemonShop | My Profile</title>
     <link rel="shortcut icon" href="./assets/images/pokeball.png" type="image/x-icon">
 </head>
 <body class="container">
-    <header class="container navbar">
-        <p class="navbar-brand">PokemonShop | My shopping cart</p>
+    <header class="navbar">
+        <p class="navbar-brand">PokemonShop | My profile</p>
     </header>
     <main>
+        <p>My Username: <span id="username"></span></p>
+        <p>My balance: <span id="my-balance" class="text-success"></span></p>
+        <h2 class="mb-3">My Pokemons</h1>
         <ul id="items-list" class="list-group"></ul>
-        <hr>
-        <p>My balance: <span id="account-balance" class="text-success"></span></p>
-        <p>Total: <span id="total-price" class="text-success"></span></p>
-        <button class="btn btn-success buy-button">Buy</button>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script type="module" src="./js/views/shopping-cart.js"></script>
+    <script type="module" src="./js/views/user-profile.js"></script>
 </body>
 </html>
